# Structures_lab_5

./: .gitignore  CMakeLists.txt  linked_two_way_list.h  sorts.c  test_runner.py
Внутренние сортировки/: Внутренние сортировки.tex
